CHANGE: introducing some small new types FIXING minor sonar issues