@@ -30,20 +30,22 @@ package mu.nu.nullpo.gui.net;
 
 import java.io.BufferedReader;
 import java.io.InputStreamReader;
+import java.net.URI;
 import java.net.URL;
-import java.net.URLConnection;
 import java.util.LinkedList;
+import java.util.List;
+import java.util.Optional;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
-import org.apache.log4j.Logger;
+import lombok.extern.log4j.Log4j;
+import mu.nu.nullpo.game.types.Version;
 
 /**
  * NewVersionChecker
  */
+@Log4j
 public class UpdateChecker implements Runnable {
-	/** Log */
-	static Logger log = Logger.getLogger(UpdateChecker.class);
 
 	/** default のXMLのURL */
 	/*
@@ -52,85 +54,56 @@ public class UpdateChecker implements Runnable {
 	 */
 	public static final String DEFAULT_XML_URL = UpdateChecker.class.getResource("NullpoUpdate.xml").toString();
 
+	private static final Pattern TAG_VERSION = Pattern.compile("<Version>(?<content>.*)</Version>");
+	private static final Pattern TAG_DATE = Pattern.compile("<Date>(?<content>.*)</Date>");
+	private static final Pattern TAG_DOWNLOAD_URL = Pattern.compile("<DownloadURL>(?<content>.*)</DownloadURL>");
+	private static final Pattern TAG_INSTALLER = Pattern.compile("<WindowsInstallerURL>(?<content>.*)</WindowsInstallerURL>");
+
+
 	/** Constant statecount */
-	public static final int STATUS_INACTIVE = 0, STATUS_LOADING = 1, STATUS_ERROR = 2, STATUS_COMPLETE = 3;
+	public static final int STATUS_INACTIVE = 0;
+	public static final int STATUS_LOADING = 1;
+	public static final int STATUS_ERROR = 2;
+	public static final int STATUS_COMPLETE = 3;
 
 	/** Current State */
 	private static volatile int status = 0;
 
 	/** event Listener */
-	private static LinkedList<UpdateCheckerListener> listeners = null;
+	private static final List<UpdateCheckerListener> listeners = new LinkedList<>();
 
 	/** Update information has been writtenXMLOfURL */
 	private static String strURLofXML = null;
 
 	/** The latest version ofVersion number */
-	private static String strLatestVersion = null;
+	private static Version latestVersion = Version.of("0");
 
 	/** Release Date */
-	private static String strReleaseDate = null;
+	private static String releaseDate = null;
 
 	/** DownloadURL */
-	private static String strDownloadURL = null;
+	private static String downloadURL = null;
 
 	/** Installer for Windows URL */
-	private static String strWindowsInstallerURL = null;
-
-	/** Update check Thread for */
-	private static Thread thread = null;
+	private static String windowsInstallerURL = null;
 
 	/**
 	 * XMLDownload theVersion numberAcquisition and
-	 * 
+	 *
 	 * @return true if successful
 	 */
 	private static boolean checkUpdate() {
 		try {
-			URL url = new URL(strURLofXML);
-			URLConnection httpCon = url.openConnection();
-			BufferedReader httpIn = new BufferedReader(new InputStreamReader(httpCon.getInputStream()));
+			URL url = new URI(strURLofXML).toURL();
+			var httpCon = url.openStream();
+			BufferedReader httpIn = new BufferedReader(new InputStreamReader(httpCon));
 
-			String str;
-			while ((str = httpIn.readLine()) != null) {
-				Pattern pat = Pattern.compile("<Version>.*</Version>");
-				Matcher matcher = pat.matcher(str);
-				if (matcher.find()) {
-					String tempStr = matcher.group();
-					tempStr = tempStr.replace("<Version>", "");
-					tempStr = tempStr.replace("</Version>", "");
-					strLatestVersion = tempStr;
-					log.debug("Latest Version:" + strLatestVersion);
-				}
-
-				pat = Pattern.compile("<Date>.*</Date>");
-				matcher = pat.matcher(str);
-				if (matcher.find()) {
-					String tempStr = matcher.group();
-					tempStr = tempStr.replace("<Date>", "");
-					tempStr = tempStr.replace("</Date>", "");
-					strReleaseDate = tempStr;
-					log.debug("Release Date:" + strReleaseDate);
-				}
-
-				pat = Pattern.compile("<DownloadURL>.*</DownloadURL>");
-				matcher = pat.matcher(str);
-				if (matcher.find()) {
-					String tempStr = matcher.group();
-					tempStr = tempStr.replace("<DownloadURL>", "");
-					tempStr = tempStr.replace("</DownloadURL>", "");
-					strDownloadURL = tempStr;
-					log.debug("Download URL:" + strDownloadURL);
-				}
-
-				pat = Pattern.compile("<WindowsInstallerURL>.*</WindowsInstallerURL>");
-				matcher = pat.matcher(str);
-				if (matcher.find()) {
-					String tempStr = matcher.group();
-					tempStr = tempStr.replace("<WindowsInstallerURL>", "");
-					tempStr = tempStr.replace("</WindowsInstallerURL>", "");
-					strWindowsInstallerURL = tempStr;
-					log.debug("Windows Installer URL:" + strWindowsInstallerURL);
-				}
+			String line;
+			while ((line = httpIn.readLine()) != null) {
+				checkTag(line, TAG_VERSION).ifPresent(version -> latestVersion = Version.of(version.replace('_', '.')));
+				checkTag(line, TAG_DATE).ifPresent(date -> releaseDate = date);
+				checkTag(line, TAG_DOWNLOAD_URL).ifPresent(value -> downloadURL = value);
+				checkTag(line, TAG_INSTALLER).ifPresent(value -> windowsInstallerURL = value);
 			}
 
 			httpIn.close();
@@ -141,99 +114,52 @@ public class UpdateChecker implements Runnable {
 		return true;
 	}
 
-	/**
-	 * Major latestVersionGet the
-	 * 
-	 * @return Major latestVersion(floatType)
-	 */
-	public static float getLatestMajorVersionAsFloat() {
-		float resultVersion = 0f;
-		if (strLatestVersion != null && strLatestVersion.length() > 0) {
-			String strDot = strLatestVersion.contains("_") ? "_" : ".";
-			String[] strSplit = strLatestVersion.split(strDot);
-
-			if (strSplit.length >= 2) {
-				String strTemp = strSplit[0] + "." + strSplit[1];
-				try {
-					resultVersion = Float.parseFloat(strTemp);
-				} catch (NumberFormatException e) {
-				}
-			}
+	private static Optional<String> checkTag(String data, Pattern pattern) {
+		Matcher matcher = pattern.matcher(data);
+		if (matcher.find()) {
+			return Optional.of(matcher.group("content"));
 		}
-		return resultVersion;
-	}
-
-	/**
-	 * Minor version of the latestVersionGet the
-	 * 
-	 * @return Minor version of the latestVersion(intType)
-	 */
-	public static int getLatestMinorVersionAsInt() {
-		int resultVersion = 0;
-		if (strLatestVersion != null && strLatestVersion.length() > 0) {
-			String strDot = strLatestVersion.contains("_") ? "_" : ".";
-			String[] strSplit = strLatestVersion.split(strDot);
-
-			if (strSplit.length >= 1) {
-				String strTemp = strSplit[strSplit.length - 1];
-				try {
-					resultVersion = Integer.parseInt(strTemp);
-				} catch (NumberFormatException e) {
-				}
-			}
-		}
-		return resultVersion;
+		return Optional.ofNullable(null);
 	}
 
 	/**
 	 * The latest version ofVersion numberOfStringGets the type representation
-	 * 
+	 *
 	 * @return The latest version ofVersion numberOfStringType
 	 *         representation("7.0.0"Such as)
 	 */
 	public static String getLatestVersionFullString() {
-		return getLatestMajorVersionAsFloat() + "." + getLatestMinorVersionAsInt();
+		return latestVersion.toString();
 	}
 
 	/**
 	 * Current versionThan the latest version ofVersionWho will determine whether
 	 * the new
-	 * 
+	 *
 	 * @param nowMajor Current MajorVersion
 	 * @param nowMinor Current MinorVersion
 	 * @return The latest edition of the new and bettertrue
 	 */
-	public static boolean isNewVersionAvailable(float nowMajor, int nowMinor) {
-		if (!isCompleted()) {
+	public static boolean isNewVersionAvailable() {
+		if (!isCompleted() || latestVersion == null) {
 			return false;
 		}
-
-		float latestMajor = getLatestMajorVersionAsFloat();
-		int latestMinor = getLatestMinorVersionAsInt();
-
-		if (latestMajor > nowMajor) {
-			return true;
-		}
-		if (latestMajor == nowMajor && latestMinor > nowMinor) {
-			return true;
-		}
-
-		return false;
+		return latestVersion.isNewer(Version.getVersion());
 	}
 
 	/**
 	 * Version check
-	 * 
+	 *
 	 * @param strURL Latest information entersXMLIn the fileURL(nullWhen I or an
 	 *               empty string default Using the value)
 	 */
 	public static void startCheckForUpdates(String strURL) {
-		if (strURL == null || strURL.length() <= 0) {
+		if (strURL == null || strURL.isEmpty()) {
 			strURLofXML = DEFAULT_XML_URL;
 		} else {
 			strURLofXML = strURL;
 		}
-		thread = new Thread(new UpdateChecker());
+		Thread thread = new Thread(new UpdateChecker());
 		thread.setDaemon(true);
 		thread.start();
 	}
@@ -254,7 +180,7 @@ public class UpdateChecker implements Runnable {
 
 	/**
 	 * Current Gets the state
-	 * 
+	 *
 	 * @return Current State
 	 */
 	public static int getStatus() {
@@ -262,59 +188,38 @@ public class UpdateChecker implements Runnable {
 	}
 
 	/**
-	 * XMLOfURLGet the
-	 * 
-	 * @return XMLOfURL
-	 */
-	public static String getStrURLofXML() {
-		return strURLofXML;
-	}
-
-	/**
-	 * The latest version ofVersion number(Unformatted)Get the(7_0_0_0Such as)
-	 * 
-	 * @return The latest version ofVersion number(Unformatted)
-	 */
-	public static String getStrLatestVersion() {
-		return strLatestVersion;
-	}
-
-	/**
 	 * Gets the date on which the latest version has been released
-	 * 
+	 *
 	 * @return Sun has released the latest version
 	 */
-	public static String getStrReleaseDate() {
-		return strReleaseDate;
+	public static String getReleaseDate() {
+		return releaseDate;
 	}
 
 	/**
 	 * Where to download the latest versionURLGet the
-	 * 
+	 *
 	 * @return Where to download the latest versionURL
 	 */
-	public static String getStrDownloadURL() {
-		return strDownloadURL;
+	public static String getDownloadURL() {
+		return downloadURL;
 	}
 
 	/**
 	 * Get the URL of Installer (*.exe) for Windows
-	 * 
+	 *
 	 * @return URL of Installer (*.exe) for Windows
 	 */
-	public static String getStrWindowsInstallerURL() {
-		return strWindowsInstallerURL;
+	public static String getWindowsInstallerURL() {
+		return windowsInstallerURL;
 	}
 
 	/**
 	 * event Adds a listener(Nothing happens and another has been added)
-	 * 
+	 *
 	 * @param l Add event Listener
 	 */
 	public static void addListener(UpdateCheckerListener l) {
-		if (listeners == null) {
-			listeners = new LinkedList<>();
-		}
 		if (listeners.contains(l)) {
 			return;
 		}
@@ -323,15 +228,12 @@ public class UpdateChecker implements Runnable {
 
 	/**
 	 * event Removes a listener
-	 * 
+	 *
 	 * @param l Remove event Listener
 	 * @return Has been deletedtrue, It has not been registered from the
 	 *         beginningfalse
 	 */
 	public static boolean removeListener(UpdateCheckerListener l) {
-		if (listeners == null) {
-			return false;
-		}
 		return listeners.remove(l);
 	}
 
@@ -342,10 +244,8 @@ public class UpdateChecker implements Runnable {
 	public void run() {
 		// Start
 		status = STATUS_LOADING;
-		if (listeners != null) {
-			for (UpdateCheckerListener l : listeners) {
-				l.onUpdateCheckerStart();
-			}
+		for (UpdateCheckerListener l : listeners) {
+			l.onUpdateCheckerStart();
 		}
 
 		// Update check
@@ -356,10 +256,8 @@ public class UpdateChecker implements Runnable {
 		}
 
 		// End
-		if (listeners != null) {
-			for (UpdateCheckerListener l : listeners) {
-				l.onUpdateCheckerEnd(status);
-			}
+		for (UpdateCheckerListener l : listeners) {
+			l.onUpdateCheckerEnd(status);
 		}
 	}
 }
